--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,10 @@
 on: [push]
 
 jobs:
-  hello_world_job:
+  package_maintenance_job:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: A job to check Maven's project dependencies maintenance
     steps:
-      - name: Hello world action step
-        id: hello
-        uses: package-maintenance-dev/github-action@v0.0.1
-        with:
-          who-to-greet: 'Mona the Octocat'
-      # Use the output from the `hello` step
-      - name: Get the output time
-        run: echo "The time was ${{ steps.hello.outputs.time }}"
+      - name: package-maintenance
+        id: package-maintenance
+        uses: package-maintenance-dev/github-action@v0.0.1-SNAPSHOT
